# housing-price-mlops

./: .coverage  .dockerignore  .env.example  .gitignore  AI_USAGE.md  Dockerfile  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml  train.py
.dvc/: config
.github/workflows/: ci.yml
.hypothesis/constants/: 028df61d93593b6c  0aa518d777558a3e  0b6fd6cd83b05706  0f69394d0fcd6be2  15dc83789271019c  226fd92283daa4bc  2385175863a594d7  2452b10b0a231796  28248b1a7e9fbfd0  2fdf662213b877e6  3653e2049f4d32f6  389d183aa4198b9b  389de9183491ae5a  4d50959f5bda3a93  4faf1fbd06ba996a  52ae16783e675ece  5bacb91ff38246f6  5f494563df28c587  609ffec12ed55d89  613e5a742670b731  65942e3cf72718de  6700f20d77af7c7d  72b58fbc83dbf95f  7be37941d86e799b  815f69624daad623  8b801b1c9d9d486d  92fa8e16db4ec149  9f6bfccc607cd31f  a188e5a92468c584  a1a34a7031a8901d  a8363a765b5c1e5b  bf7e2d3a4bfeebee  c184fd281c092491  d226759c10ff183b  d3966cbc5e08c871  da39a3ee5e6b4b0d  e37cc13e7b60bc90  fd82a21ca7f3862e
data/: columns.txt
mlruns/1/1a06de8230ad4dda89e88428d3e6e7e2/artifacts/artifact_bundle/: metadata.json
mlruns/1/2d9c1187ff5440689db16bb06a721574/artifacts/: data_summary.json
mlruns/1/3216aee624cd494e9a17afafa6e45904/artifacts/: evaluation_report.json
mlruns/1/44cd6e0c70ce411595d8a7ca4a91c583/artifacts/artifact_bundle/: metadata.json
mlruns/1/92929a01030141b885a659e7644748ef/artifacts/artifact_bundle/: metadata.json
mlruns/1/dbc1051c164948509086d750b30b55f5/artifacts/artifact_bundle/: metadata.json
mlruns/1/models/m-261d935eebc441ffaf1b76ebf6afe253/artifacts/: MLmodel  model.pkl  registered_model_meta  serving_input_example.json
mlruns/1/models/m-33c2316f28b249ecbc80d434b5c64b4e/artifacts/: MLmodel  input_example.json
mlruns/1/models/m-40ac61a7120f4dbbbbe5376e0dda5296/artifacts/: MLmodel
mlruns/1/models/m-88d80e58a8f843249a8cf6877c9f580b/artifacts/: MLmodel
mlruns/1/models/m-96447cb7384a49cf9432db288aec85ba/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-d0c252a7ca5d4f389b6cbf38ece9f97a/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-fcdf9638dd444db2b982c79955ce6e63/artifacts/: MLmodel  model.pkl  registered_model_meta
models/: evaluation_report.json  housing_model.joblib  housing_model_scaler.joblib
models/artifact_bundle/: metadata.json  model.joblib  preprocessor.joblib
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboardproviders.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
notebooks/: review.ipynb
scripts/: init_dvc.py  load_predict_api.py  promote_model.py  run_experiment.py  seed_mlflow.py  wait_for_mlflow.py
seed/artifact_bundle/: model.joblib  preprocessor.joblib
src/: logging_config.py
src/api/: dependencies.py  error_handlers.py  main.py  middleware.py  router.py  schemas.py  security.py  service.py
src/artifacts/: __init__.py  bundle.py  metadata.py
src/cli/: __init__.py  info.py  main.py  promote.py  register.py  runs.py  train.py  utils.py
src/config/: settings.py
src/data/: cache.py  loader.py  preprocess.py  preprocessing.py
src/data/preprocessing/: __init__.py  _legacy.py  base.py  factory.py
src/data/preprocessing/strategies/: __init__.py  v1_median.py  v2_knn.py  v3_iterative.py  v4_robust_col.py
src/experiments/: __init__.py  config.yaml  runner.py  train_experiment.py
src/models/: base.py  cross_validation.py  evaluate.py  factory.py  train.py
src/models/strategies/: __init__.py  gradient_boost.py  linear.py  random_forest.py  xgboost_model.py
src/training/: __init__.py  core.py
src/utils/: __init__.py  hashing.py  mlflow_helpers.py
tests/: __init__.py  conftest.py  test_api.py  test_bundle.py  test_cache.py  test_cross_validation.py  test_data.py  test_e2e.py  test_evaluate.py  test_factories.py  test_loader.py  test_mlflow_helpers.py  test_model.py  test_model_sanity.py  test_models.py  test_preprocess.py  test_preprocessing.py  test_property.py  test_utils.py
tests/integration/: conftest.py  test_smoke.py
(+1 files in other folders)
